Edit of robot.yaml

--- a/robot.yaml
+++ b/robot.yaml
@@ -6,10 +6,7 @@ tasks:
 
 condaConfigFile: conda.yaml
 
-artifactsDir:
-  - output
-  - output/images
-
+artifactsDir: output
 PATH:
   - .
 PYTHONPATH:
